<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|center_horizontal"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:weightSum="9"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:id="@+id/scroll_textView_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:scrollbars="none">

        <TextView
            android:id="@+id/textView_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/size_text_large" />
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <HorizontalScrollView
            android:id="@+id/scroll_textView_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="8dp"
            android:layout_weight="3"
            android:scrollbars="none">

            <TextView
                android:id="@+id/textView_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textSize="@dimen/size_text_small"
                android:textStyle="bold" />
        </HorizontalScrollView>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_backspace_24"
                android:backgroundTint="?colorSecondary"
                 />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="?selectableItemBackground"
                android:gravity="center"
                android:textStyle="bold" />
        </FrameLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="#E1E1E1" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="6"
        android:orientation="horizontal"
        android:weightSum="5">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_ac"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/ac"
                android:textColor="?colorSecondary"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />


            <Button
                android:id="@+id/button_openParenthesis"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/open_parenthesis"
                android:textColor="?colorSecondary"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_closeParenthesis"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/close_parenthesis"
                android:textColor="?colorSecondary"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />


            <Button
                android:id="@+id/button_divisive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/divisive"
                android:textColor="?colorSecondary"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/seven"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />


            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/eight"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />


            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/nine"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />


            <Button
                android:id="@+id/button_star"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/star"
                android:textColor="?colorSecondary"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/four"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />


            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/five"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />


            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/six"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />


            <Button
                android:id="@+id/button_mine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/mine"
                android:textColor="?colorSecondary"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/one"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />


            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/two"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />


            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/three"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />


            <Button
                android:id="@+id/button_plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/plus"
                android:textColor="?colorSecondary"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_negative"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/negative"
                android:textColor="?colorSecondary"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />


            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/zero"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />


            <Button
                android:id="@+id/button_dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/dot"
                android:textSize="@dimen/size_text_button_medium"
                android:textStyle="bold" />


            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button_equal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/shape_circle"
                    android:gravity="center"
                    android:text="@string/equal"
                    android:textColor="?colorOnSecondary"
                    android:textSize="@dimen/size_text_button_medium"
                    android:textStyle="bold" />
            </FrameLayout>

        </TableRow>

    </TableLayout>

</LinearLayout>